Issue #23848: Expose _Py_DumpHexadecimal()

This function will be reused by faulthandler.